changed index.html entirely to a new design + fixed the alignment and css

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(35, 35, 35);
+    background-color: rgb(0, 0, .99);
     z-index: 1;
 }
 
@@ -90,6 +90,46 @@ main>div>div>p {
     margin-left: -486px;
     font-size: 20px;
     font-family: 'Hind Guntur', sans-serif;
+}
+
+.home {
+    margin-top: 250px;
+    margin-left: 350px;
+}
+
+.about {
+    color: white;  
+    font-size: large;  
+}
+
+.about:hover {
+    color: white;
+}
+
+.blue {
+    color: rgb(0, 0, 140);
+    
+}
+
+.blue:hover {
+    color: rgb(0, 0, 140);    
+}
+
+.letter-space {
+    font-family: 'Bitter', serif;  
+    font-size:80px;    
+    margin-top: 35px;  
+    transition: 0.4s;
+}
+
+
+.letter-space:hover {
+    letter-spacing: 15px;
+    font-size: 90px;   
+}
+
+.anchor {
+    text-decoration: none !important;
 }
 
 @media only screen and (max-width: 600px) {
